# phynal

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
include/phynal/: phynal.hpp
include/phynal/casters/: primitives.hpp
include/phynal/invoke/: cpp_from_py.hpp
test/: CMakeLists.txt
test/invoke/: test_cpp_from_py.cpp  test_cpp_py_round_trip.cpp
test/modules/: mod1.cpp  test1.py
